--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
-        <!-- fichier style -->
+    <!-- fichier style -->
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
@@ -22,17 +22,20 @@
     <header>
         <!-- logo et titre -->
         <div class="container">
-            <div>
-                <a href=""><img src="assets/logo.png" alt=""></a>
-                <h1>Les petis plats</h1>
+            <div class="jumbotron-heading p-5  imgtitle ">
+                <a href="#"><img src="assets/logo.png" alt="Logo les petits plats"></a>
+                <h1 class="title">Les petits plats</h1>
             </div>
             <!-- formulaire de recherche -->
-            <form action="">
-                <input type="text" placeholder="Rechercher un ingrédient, appareil, ustensiles ou une recette">
-                <div>
-                    <button><i class="fa fa-search" aria-hidden="true"></i></button>
+            <form action="" class="">
+                <div class="input-group p-5 ">
+                    <input type="text" class="form-control inputGroupBorder" placeholder="Rechercher un ingrédient, appareil, ustensiles ou une recette">
+                    <div class="input-group-btn">
+                        <button type="submit" class="btn btn-default buttonGroupBorder" >
+                            <i class="fa fa-search" aria-hidden="true"></i>
+                        </button>
+                    </div>
                 </div>
-
             </form>
         </div>
         <div class="mt-3"></div>
@@ -41,13 +44,69 @@
         <div class="mt-3"></div>
         <!-- Les menus dropdown -->
         <div class="container">
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class="row">
+                <!--ingrédient -->
+                <div class="col-md-3 contents">
+                    <div class="dropdown dropdownSearch">
+                        <div class="input-group w-200 p-05  pb-0 ">
+                            <input type="text" class="form-control inputDropdownIngredient" placeholder="Ingrédient"
+                                id="dropdownInputIngredient"                 
+                                aria-label="Ingrédient listes">
+                            <div class="input-group-btn">
+                                <button class="btn btn-default btnDropdownIngredient" type="submit">
+                                    <img src="assets/dropdown-icon-down.png" class="icon icon-dropdown-down"
+                                        alt="Dropdown down icon" />
+                                    <img src="assets/dropdown-icon-up.png" class="icon icon-dropdown-up"
+                                        alt="Dropdown up icon" />
+                                </button>
+                            </div>
+                        </div>
+                        <ul class="dropDownList" id="dropdownIngredientList"></ul>
+                    </div>
+                </div>
+                <!--appareils-->
+                <div class="col-md-3 contents">
+                    <div class="dropdown dropdownSearch">
+                        <div class="input-group w-200 p-05  pb-0 ">
+                            <input type="text" class="form-control inputDropdownIngredient" placeholder="Ingrédient"
+                                id="dropdownInputIngredient"                 
+                                aria-label="Ingrédient listes">
+                            <div class="input-group-btn">
+                                <button class="btn btn-default btnDropdownIngredient" type="submit">
+                                    <img src="assets/dropdown-icon-down.png" class="icon icon-dropdown-down"
+                                        alt="Dropdown down icon" />
+                                    <img src="assets/dropdown-icon-up.png" class="icon icon-dropdown-up"
+                                        alt="Dropdown up icon" />
+                                </button>
+                            </div>
+                        </div>
+                        <ul class="dropDownList" id="dropdownIngredientList"></ul>
+                    </div>
+                </div>
+                <!--Ustensils-->
+                <div class="col-md-3 contents">
+                    <div class="dropdown dropdownSearch">
+                        <div class="input-group w-200 p-05  pb-0 ">
+                            <input type="text" class="form-control inputDropdownIngredient" placeholder="Ingrédient"
+                                id="dropdownInputIngredient"                 
+                                aria-label="Ingrédient listes">
+                            <div class="input-group-btn">
+                                <button class="btn btn-default btnDropdownIngredient" type="submit">
+                                    <img src="assets/dropdown-icon-down.png" class="icon icon-dropdown-down"
+                                        alt="Dropdown down icon" />
+                                    <img src="assets/dropdown-icon-up.png" class="icon icon-dropdown-up"
+                                        alt="Dropdown up icon" />
+                                </button>
+                            </div>
+                        </div>
+                        <ul class="dropDownList" id="dropdownIngredientList"></ul>
+                    </div>
+                </div>
+            </div>            
         </div>
     </header>
     <!-- end header -->
-    <div class="mt-3"></div>    
+    <div class="mt-3"></div>
     <main>
         <!-- affichage des recettes -->
         <div class="container"></div>
