--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
                 <div class="col-md-3 contents">
                     <div class="dropdown dropdownSearch">
                         <div class="input-group w-200 p-05  pb-0 ">
-                            <input type="text" class="form-control inputDropdownIngredient" placeholder="Ingrédient"
+                            <input type="text" class="form-control inputDropdownAppareil" placeholder="Appareils"
                                 id="dropdownInputIngredient"                 
                                 aria-label="Ingrédient listes">
                             <div class="input-group-btn">
-                                <button class="btn btn-default btnDropdownIngredient" type="submit">
+                                <button class="btn btn-default btnDropdownAppareil" type="submit">
                                     <img src="assets/dropdown-icon-down.png" class="icon icon-dropdown-down"
                                         alt="Dropdown down icon" />
                                     <img src="assets/dropdown-icon-up.png" class="icon icon-dropdown-up"
@@ -87,11 +87,11 @@
                 <div class="col-md-3 contents">
                     <div class="dropdown dropdownSearch">
                         <div class="input-group w-200 p-05  pb-0 ">
-                            <input type="text" class="form-control inputDropdownIngredient" placeholder="Ingrédient"
+                            <input type="text" class="form-control inputDropdownUstensil" placeholder="Ustensiles"
                                 id="dropdownInputIngredient"                 
                                 aria-label="Ingrédient listes">
                             <div class="input-group-btn">
-                                <button class="btn btn-default btnDropdownIngredient" type="submit">
+                                <button class="btn btn-default btnDropdownUstensil" type="submit">
                                     <img src="assets/dropdown-icon-down.png" class="icon icon-dropdown-down"
                                         alt="Dropdown down icon" />
                                     <img src="assets/dropdown-icon-up.png" class="icon icon-dropdown-up"
