--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
     <!-- Boostrap icons -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- boostrap cdn -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="icon" href="./assets/favicon.ico" />
     <!-- fichier style -->
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Les Petits Plats</title>
 </head>
 
 <body>
@@ -29,7 +26,7 @@
             <!-- formulaire de recherche -->
             <form action="" class="">
                 <div class="input-group p-5 ">
-                    <input type="text" class="form-control inputGroupBorder" placeholder="Rechercher un ingrédient, appareil, ustensiles ou une recette">
+                    <input id="inputSearchAll" type="text" class="form-control inputGroupBorder" placeholder="Rechercher un ingrédient, appareil, ustensiles ou une recette">
                     <div class="input-group-btn">
                         <button type="submit" class="btn btn-default buttonGroupBorder" >
                             <i class="fa fa-search" aria-hidden="true"></i>
@@ -44,11 +41,11 @@
         <div class="mt-3"></div>
         <!-- Les menus dropdown -->
         <div class="container">
-            <div class="row">
+            <div class="row m-4">
                 <!--ingrédient -->
-                <div class="col-md-3 contents">
+                <div class="col-md-3 bloc-card">
                     <div class="dropdown dropdownSearch">
-                        <div class="input-group w-200 p-05  pb-0 ">
+                        <div class="input-group w-150 p-05  pb-0 ">
                             <input type="text" class="form-control inputDropdownIngredient" placeholder="Ingrédient"
                                 id="dropdownInputIngredient"                 
                                 aria-label="Ingrédient listes">
@@ -65,9 +62,9 @@
                     </div>
                 </div>
                 <!--appareils-->
-                <div class="col-md-3 contents">
+                <div class="col-md-3 bloc-card">
                     <div class="dropdown dropdownSearch">
-                        <div class="input-group w-200 p-05  pb-0 ">
+                        <div class="input-group w-150 p-05  pb-0 ">
                             <input type="text" class="form-control inputDropdownAppareil" placeholder="Appareils"
                                 id="dropdownInputIngredient"                 
                                 aria-label="Ingrédient listes">
@@ -80,13 +77,13 @@
                                 </button>
                             </div>
                         </div>
-                        <ul class="dropDownList" id="dropdownIngredientList"></ul>
+                        <ul class="dropDownList" id="dropdownAppareilList"></ul>
                     </div>
                 </div>
                 <!--Ustensils-->
-                <div class="col-md-3 contents">
+                <div class="col-md-3 bloc-card">
                     <div class="dropdown dropdownSearch">
-                        <div class="input-group w-200 p-05  pb-0 ">
+                        <div class="input-group w-150 p-05  pb-0 ">
                             <input type="text" class="form-control inputDropdownUstensil" placeholder="Ustensiles"
                                 id="dropdownInputIngredient"                 
                                 aria-label="Ingrédient listes">
@@ -99,7 +96,7 @@
                                 </button>
                             </div>
                         </div>
-                        <ul class="dropDownList" id="dropdownIngredientList"></ul>
+                        <ul class="dropDownList" id="dropdownUstensilList"></ul>
                     </div>
                 </div>
             </div>            
@@ -109,17 +106,20 @@
     <div class="mt-3"></div>
     <main>
         <!-- affichage des recettes -->
-        <div class="container"></div>
+        <div class="album py-5 bg-light">
+            <div class="container">
+                <div class="row" id="recipes"></div>
+                <div class="well" id="recipes-not-found">
+                    <p>Aucune recette ne correspond à votre critère… vous pouvez chercher « tarte aux pommes », «
+                        poisson », etc</p>
+                </div>
+            </div>
+        </div>
     </main>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-        crossorigin="anonymous"></script>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script> 
     <script src="js/script.js"></script>
 </body>
 
